...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/btnDateEO1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
...
            app:layout_constraintEnd_toStartOf="@id/frmTimesEO1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frmTimesEO1"
            android:src="@{date1.dateSet ? @drawable/ic_calendar_tick : @drawable/ic_calendar, default=@drawable/ic_calendar}" />

        <ImageView
            android:id="@+id/btnDateEO2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
...
            app:layout_constraintEnd_toStartOf="@id/frmTimesEO2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frmTimesEO2"
            android:src="@{date2.dateSet ? @drawable/ic_calendar_tick : @drawable/ic_calendar, default=@drawable/ic_calendar}" />

        <ImageView
            android:id="@+id/btnDateEO3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
...
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDateEO3"
            app:layout_constraintTop_toBottomOf="@id/frmTimesEO2"
            app:layout_constraintBottom_toTopOf="@id/btnSet">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTimes3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

...
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <!--
        This is no longer being used
        <ImageView
            android:id="@+id/btnSensor"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
...
