...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAddFoodItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btn_square_border"
...
                android:background="@drawable/btn_square_border"
                android:drawableTop="@drawable/ic_btn_link"
                android:paddingTop="4dp"
                android:text="@string/linkrecipe"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnFinish"
                app:layout_constraintStart_toEndOf="@id/btnAddFoodItem"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/btnFinish"
...
